fix text overflow issue and make other CSS adjustments

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,7 @@ a {
   margin-top: 24px;
   border: solid rgb(177, 177, 177) 1px;
   border-radius: 5px;
-  height: 161px;
+  min-height: 161px;
   width: 100%;
   max-width: 800px;
 }
@@ -88,13 +88,13 @@ a {
 }
 
 .vote-container {
-  width: 40px;
+  min-width: 40px;
   background-color: #F7F9FA;
   text-align: center;
   padding-top: 8px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  font-size: x-small;
+  font-size: small;
 }
 
 .vote-container button {
@@ -105,6 +105,8 @@ a {
 
 .post-message {
   padding: 16px;
+  word-break: break-word;
+  overflow-y: scroll;
 }
 
 .post-info {
